<resources>
    <string name="app_name">Widgets</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="add">+</string>
    <string name="name_of_category">Name of Category</string>
    <string name="create">Create</string>
    <string name="notification">Notification</string>
    <string name="empty">You have no reminders for today, nice!</string>
    <string name="description">Description</string>
    <string-array name="time">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
        <item>Night</item>
    </string-array>
</resources>