<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/gray_bg"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cardlike_border"
        android:elevation="20dp"
        android:padding="10dp"
        android:text="@string/name_of_category"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/new_task_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:hint="@string/notification"
        android:inputType="text"
        android:textSize="14sp"
        tools:ignore="Autofill" />

    <Spinner
        android:id="@+id/new_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/create_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray" />

</LinearLayout>