<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_task"
    style="@style/Widget.Widgets.AppWidget.Container"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/semi_transparent"
    android:orientation="vertical"
    android:theme="@style/Theme.Widgets.AppWidgetContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/category_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_of_category"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/add_btn"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/add_btn"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_task"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/widget_item">
    </ListView>

    <TextView
        android:id="@+id/widgetEmptyViewText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>